--- a/tutorials/ax_botorch/botrch_minimal_example_custom_acq.ipynb
+++ b/tutorials/ax_botorch/botrch_minimal_example_custom_acq.ipynb
@@ -854,8 +854,8 @@
    "outputs": [],
    "source": [
     "# For our purposes, the metric is a wrapper that structures the function output.\n",
-    "class DummyMetric(Metric):  # noqa: D101\n",
-    "    def fetch_trial_data(self, trial):  # type: ignore  # noqa: ANN001, D102\n",
+    "class DummyMetric(Metric):\n",
+    "    def fetch_trial_data(self, trial):  # type: ignore  # noqa: ANN001\n",
     "        records = []\n",
     "        for arm_name, arm in trial.arms_by_name.items():\n",
     "            params = arm.parameters\n",
@@ -891,8 +891,8 @@
     ")\n",
     "\n",
     "\n",
-    "class MyRunner(Runner):  # noqa: D101\n",
-    "    def run(self, trial):  # type: ignore  # noqa: ANN001, D102\n",
+    "class MyRunner(Runner):\n",
+    "    def run(self, trial):  # type: ignore  # noqa: ANN001\n",
     "        trial_metadata = {\"name\": str(trial.index)}\n",
     "        return trial_metadata\n",
     "\n",
@@ -1145,7 +1145,7 @@
    "outputs": [],
    "source": [
     "for i in range(5):\n",
-    "    print(f\"Running trial {i+1}/30...\")\n",
+    "    print(f\"Running trial {i + 1}/30...\")\n",
     "    parameters, trial_index = ax_client.get_next_trial()\n",
     "    # Local evaluation here can be replaced with deployment to external system.\n",
     "    ax_client.complete_trial(trial_index=trial_index, raw_data=evaluate(parameters))"
