refactor for PR

--- a/examples/crest_heights_north_sea/usecase/documentation/example_simulator.ipynb
+++ b/examples/crest_heights_north_sea/usecase/documentation/example_simulator.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
     "\n",
     "dummy_environment = np.column_stack((hs, tp))\n",
     "\n",
-    "c_max = max_crest_height_simulator_function(x=dummy_environment, water_depth=110, sample_period=3)\n",
+    "c_max = max_crest_height_simulator_function(x=dummy_environment)\n",
     "print(c_max)"
    ]
   },
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1111,12 +1111,12 @@
    ],
    "source": [
     "sim = MaxCrestHeightSimulator()\n",
-    "sim(x=dummy_environment, water_depth=110, sample_period=3, n_simulations_per_point=3).shape"
+    "sim(x=dummy_environment, n_simulations_per_point=3).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1132,9 +1132,9 @@
    "source": [
     "sim = MaxCrestHeightSimulator()\n",
     "\n",
-    "print(sim(x=dummy_environment, water_depth=110, sample_period=3)[0, 0, 0])\n",
+    "print(sim(x=dummy_environment)[0, 0, 0])\n",
     "print(\"---\")\n",
-    "print(sim(x=dummy_environment, water_depth=110, sample_period=3)[0, 0, 0])"
+    "print(sim(x=dummy_environment)[0, 0, 0])"
    ]
   },
   {
