changed to seeded simulator in documentation\example_simulator.ipynb

--- a/examples/crest_heights_north_sea/usecase/documentation/example_simulator.ipynb
+++ b/examples/crest_heights_north_sea/usecase/documentation/example_simulator.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,113 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[14.33080702]\n",
-      " [10.99185495]\n",
-      " [11.79786814]\n",
-      " [11.36786605]\n",
-      " [16.15616034]\n",
-      " [11.39538385]\n",
-      " [11.07291989]\n",
-      " [10.80666307]\n",
-      " [10.14289387]\n",
-      " [12.78436788]\n",
-      " [10.81901404]\n",
-      " [14.44016207]\n",
-      " [ 8.8482554 ]\n",
-      " [10.45107012]\n",
-      " [ 9.52028271]\n",
-      " [11.31441954]\n",
-      " [12.42531751]\n",
-      " [13.44780713]\n",
-      " [15.29996812]\n",
-      " [12.43670938]\n",
-      " [10.30294612]\n",
-      " [16.22611354]\n",
-      " [ 9.65634766]\n",
-      " [12.05782847]\n",
-      " [11.28154066]\n",
-      " [ 9.23266794]\n",
-      " [11.77809754]\n",
-      " [ 9.13339695]\n",
-      " [10.91251119]\n",
-      " [ 8.47958676]\n",
-      " [ 8.96599874]\n",
-      " [11.7606532 ]\n",
-      " [12.1238678 ]\n",
-      " [12.63154906]\n",
-      " [13.51943388]\n",
-      " [11.59375096]\n",
-      " [11.13713865]\n",
-      " [11.25822241]\n",
-      " [11.240152  ]\n",
-      " [12.0270195 ]\n",
-      " [10.275274  ]\n",
-      " [13.47210302]\n",
-      " [10.29046228]\n",
-      " [10.80474976]\n",
-      " [12.88454283]\n",
-      " [11.10373855]\n",
-      " [12.9231352 ]\n",
-      " [15.53315406]\n",
-      " [11.83597781]\n",
-      " [12.07835543]\n",
-      " [17.28824092]\n",
-      " [11.23937123]\n",
-      " [ 9.70001651]\n",
-      " [10.39676734]\n",
-      " [10.58353535]\n",
-      " [11.41208146]\n",
-      " [13.57085512]\n",
-      " [ 9.67788454]\n",
-      " [11.28199313]\n",
-      " [10.12294691]\n",
-      " [14.19756592]\n",
-      " [10.58411126]\n",
-      " [11.02326039]\n",
-      " [15.75796261]\n",
-      " [10.50412679]\n",
-      " [11.66019763]\n",
-      " [11.98320153]\n",
-      " [10.02936544]\n",
-      " [10.80292139]\n",
-      " [10.84988701]\n",
-      " [12.69022408]\n",
-      " [ 9.97678391]\n",
-      " [11.29354696]\n",
-      " [12.63225653]\n",
-      " [ 6.5559759 ]\n",
-      " [ 9.14754457]\n",
-      " [13.70664705]\n",
-      " [12.42846875]\n",
-      " [ 7.78855476]\n",
-      " [10.46003514]\n",
-      " [10.92756054]\n",
-      " [12.26891057]\n",
-      " [11.32973811]\n",
-      " [12.98074831]\n",
-      " [10.93342627]\n",
-      " [11.72185664]\n",
-      " [10.97313339]\n",
-      " [10.73709951]\n",
-      " [10.95739976]\n",
-      " [13.76135816]\n",
-      " [12.90367098]\n",
-      " [16.24668372]\n",
-      " [11.02683848]\n",
-      " [12.28760728]\n",
-      " [10.03491726]\n",
-      " [11.80509646]\n",
-      " [ 9.69954518]\n",
-      " [ 9.29165737]\n",
-      " [10.36792736]\n",
-      " [11.68263146]]\n"
+     "ename": "TypeError",
+     "evalue": "max_crest_height_simulator_function() got an unexpected keyword argument 'water_depth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      3\u001b[39m tp = rng.normal(\u001b[32m10\u001b[39m, size=\u001b[32m100\u001b[39m)\n\u001b[32m      5\u001b[39m dummy_environment = np.column_stack((hs, tp))\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m c_max = \u001b[43mmax_crest_height_simulator_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdummy_environment\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwater_depth\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m110\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msample_period\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(c_max)\n",
+      "\u001b[31mTypeError\u001b[39m: max_crest_height_simulator_function() got an unexpected keyword argument 'water_depth'"
      ]
     }
    ],
