--- a/examples/crest_heights_north_sea/usecase/documentation/example_simulator.ipynb
+++ b/examples/crest_heights_north_sea/usecase/documentation/example_simulator.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
     "\n",
     "dummy_environment = np.column_stack((hs, tp))\n",
     "\n",
-    "c_max = max_crest_height_simulator_function(x=dummy_environment, water_depth=110, sample_period=3)\n",
+    "c_max = max_crest_height_simulator_function(x=dummy_environment)\n",
     "print(c_max)"
    ]
   },
